[gd_scene load_steps=5 format=3 uid="uid://r24nq2vebpae"]

[ext_resource type="Script" path="res://Src/Scripts/UI/pause_menu.gd" id="1_8palc"]
[ext_resource type="PackedScene" uid="uid://bcole6udjkatn" path="res://Src/Scenes/UI/main_menu.tscn" id="2_2tmv0"]
[ext_resource type="Theme" uid="uid://boq2f86ty0hpo" path="res://Src/Assets/Other/main_theme.tres" id="2_4rkuw"]
[ext_resource type="PackedScene" uid="uid://dj7jg16fqoxpu" path="res://Src/Scenes/UI/settings.tscn" id="3_yow8o"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("pauseMenu", "settingsMenu", "backButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8palc")
mainMenu = ExtResource("2_2tmv0")
pauseMenu = NodePath("MainButtons")
settingsMenu = NodePath("Settings")
backButton = NodePath("BackButton")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -90.0
offset_right = 115.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="MainButtons"]
layout_mode = 2
theme = ExtResource("2_4rkuw")
text = "Resume"

[node name="Settings" type="Button" parent="MainButtons"]
layout_mode = 2
theme = ExtResource("2_4rkuw")
text = "Settings"

[node name="MainMenu" type="Button" parent="MainButtons"]
layout_mode = 2
theme = ExtResource("2_4rkuw")
text = "Main Menu"

[node name="Settings" parent="." instance=ExtResource("3_yow8o")]
visible = false
layout_mode = 1

[node name="BackButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 49.0
offset_top = 36.0
offset_right = 113.0
offset_bottom = 67.0
theme = ExtResource("2_4rkuw")
theme_override_font_sizes/font_size = 30
text = "<- Back"

[node name="Background" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.239216, 0.239216, 0.239216, 0.901961)

[connection signal="pressed" from="MainButtons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MainButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
